@@ -68,6 +68,7 @@ DEFAULT_TRIM_AT_COVERAGE = 20
 DEFAULT_CUTOFF = 2
 DEFAULT_DIGINORM_COVERAGE = 20
 
+REPORT_EVERY_N_READS=10000
 
 def get_parser():
     epilog = """\
@@ -418,11 +419,14 @@ def main():
         # main loop through the file.
         n_start = trimmer.n_reads
         save_start = trimmer.n_saved
+
+        watermark = REPORT_EVERY_N_READS
         for read in trimmer.pass1(paired_iter, pass2fp):
-            if (trimmer.n_reads - n_start) % 10000 == 0:
-                print('...', n, filename, trimmer.n_saved,
+            if (trimmer.n_reads - n_start) > watermark:
+                print('...', filename, trimmer.n_saved,
                       trimmer.n_reads, trimmer.n_bp,
                       written_reads, written_bp, file=sys.stderr)
+                watermark += REPORT_EVERY_N_READS
 
             # write out the trimmed/etc sequences that AREN'T going to be
             # revisited in a 2nd pass.
@@ -468,12 +472,14 @@ def main():
         paired_iter = broken_paired_reader(screed_iter, min_length=K,
                                            force_single=True)
 
+        watermark = REPORT_EVERY_N_READS
         for read in trimmer.pass2(paired_iter):
-            if (trimmer.n_reads - n_start) % 10000 == 0:
+            if (trimmer.n_reads - n_start) > watermark:
                 print('... x 2', trimmer.n_reads - n_start,
                       pass2filename, trimmer.n_saved,
                       trimmer.n_reads, trimmer.n_bp,
                       written_reads, written_bp, file=sys.stderr)
+                watermark += REPORT_EVERY_N_READS
 
             write_record(read, trimfp)
             written_reads += 1
